tree-sitter-stash/grammar.js
    source_file: $ => repeat($._statement_or_declaration),

    _statement_or_declaration: $ => choice(
      $._declaration,
      $._statement,
    ),

    // ═══════════════════════════════════════
    // DECLARATIONS
    // ═══════════════════════════════════════

    variable_declaration: $ => seq(
      optional('readonly'),
      'let',
      choice(
        $.destructure_pattern,
        seq(field('name', $.identifier), optional($.type_annotation)),
      ),
      optional(seq('=', $._expression)),
      ';',
    ),

    // Like variable_declaration but without the optional 'readonly' prefix.
    // Used in the for-loop init slot, where 'readonly' is rejected by the parser.
    _for_var_init: $ => seq(
      'let',
      choice(
        $.destructure_pattern,
        seq(field('name', $.identifier), optional($.type_annotation)),
      ),
      optional(seq('=', $._expression)),
      ';',
    ),

    constant_declaration: $ => seq(
      optional('readonly'),
      'const',
      field('name', $.identifier),
      optional($.type_annotation),
      '=',
      $._expression,
      ';',
    ),

    function_declaration: $ => seq(
      optional('async'),
      'fn',
      field('name', $.identifier),
      $.parameter_list,
      optional($.return_type),
      $.block,
    ),

    struct_declaration: $ => seq(
      'struct',
      field('name', $.identifier),
      optional(seq(':', $.interface_list)),
      $.struct_body,
    ),

    struct_body: $ => seq(
      '{',
      optional(commaSep1($._struct_member)),
      optional(','),
      '}',
    ),

    _struct_member: $ => choice(
      $.struct_method,
      $.struct_field,
    ),

    struct_field: $ => seq(
      field('name', $.identifier),
      optional($.type_annotation),
      optional(seq('=', $._expression)),
    ),

    enum_declaration: $ => seq(
      'enum',
      field('name', $.identifier),
      '{',
      optional(commaSep1($.enum_member)),
      optional(','),
      '}',
    ),

    enum_member: $ => field('name', $.identifier),

    interface_declaration: $ => seq(
      'interface',
      field('name', $.identifier),
      '{',
      optional(commaSep1($._interface_member)),
      optional(','),
      '}',
    ),

    _interface_member: $ => choice(
      $.interface_method,
      $.interface_field,
    ),

    interface_method: $ => seq(
      optional('fn'),
      field('name', $.identifier),
      $.parameter_list,
      optional($.return_type),
    ),

    import_statement: $ => choice(
      seq('import', '{', $.import_specifier_list, '}', 'from', $._expression, ';'),
      seq('import', $._expression, 'as', field('alias', $.identifier), ';'),
    ),

    import_specifier_list: $ => commaSep1($.identifier),

    // ═══════════════════════════════════════
    // PARAMETERS & TYPES
    // ═══════════════════════════════════════

    parameter_list: $ => seq(
      '(',
      optional(commaSep1($.parameter)),
      optional(','),
      ')',
    ),

    parameter: $ => choice(
      $.rest_parameter,
      seq(
        field('name', $.identifier),
        optional($.type_annotation),
        optional(seq('=', $._expression)),
      ),
    ),

    expression_statement: $ => seq(
      $._expression,
      ';',
    ),

    block: $ => seq(
      '{',
      repeat($._statement_or_declaration),
      '}',
    ),

    if_statement: $ => prec.right(seq(
      'if',
      '(',
      $._expression,
      ')',
      $.block,
      repeat($.else_if_clause),
      optional($.else_clause),
    )),

    else_clause: $ => seq(
      'else',
      $.block,
    ),

    while_statement: $ => seq(
      'while',
      '(',
      $._expression,
      ')',
      $.block,
    ),

    for_in_statement: $ => prec(1, seq(
      'for',
      '(',
      'let',
      choice(
        seq(field('index', $.identifier), ',', field('value', $.identifier)),
        field('value', $.identifier),
      ),
      optional($.type_annotation),
      'in',
      $._expression,
      ')',
      $.block,
    )),

    for_statement: $ => seq(
      'for',
      '(',
      optional(choice(
        $._for_var_init,
        seq($._expression, ';'),
      )),
      optional($._expression),
      ';',
      optional($._expression),
      ')',
      $.block,
    ),

    switch_statement: $ => seq(
      'switch',
      '(',
      $._expression,
      ')',
      '{',
      repeat($.switch_case),
      optional($.switch_default),
      '}',
    ),

    switch_case: $ => seq(
      'case',
      commaSep1($._expression),
      ':',
      $.block,
    ),

    switch_default: $ => seq(
      'default',
      ':',
      $.block,
    ),

    try_catch_statement: $ => seq(
      'try',
      $.block,
      optional(seq('catch', '(', field('error', $.identifier), ')', $.block)),
      optional(seq('finally', $.block)),
    ),

    return_statement: $ => seq(
      'return',
      optional($._expression),
      ';',
    ),

    throw_statement: $ => seq(
      'throw',
      $._expression,
      ';',
    ),

    break_statement: $ => seq('break', ';'),

    continue_statement: $ => seq('continue', ';'),

    defer_statement: $ => seq(
      'defer',
      choice(
        $.block,
        seq(optional('await'), $._expression, ';'),
      ),
    ),

    _expression: $ => choice(
      $.identifier,
      $.number,
      $.float,
      $.hex_number,
      $.binary_number,
      $.octal_number,
      $.string,
      $.interpolated_string,
      $.triple_string,
      $.boolean,
      $.null,
      $.array_expression,
      $.dict_expression,
      $.binary_expression,
      $.unary_expression,
      $.update_expression,
      $.assignment_expression,
      $.ternary_expression,
      $.call_expression,
      $.member_expression,
      $.optional_member_expression,
      $.index_expression,
      $.pipe_expression,
      $.lambda_expression,
      $.range_expression,
      $.is_expression,
      $.command_expression,
      $.struct_init_expression,
      $.parenthesized_expression,
      $.await_expression,
      $.try_expression,
      $.switch_expression,
      $.retry_expression,
      $.timeout_expression,
      $.duration_literal,
      $.byte_size_literal,
      $.semver_literal,
      $.ip_address_literal,
    ),

    boolean: $ => choice('true', 'false'),
    null: $ => 'null',

    number: $ => /[0-9][0-9_]*/,

    float: $ => token(prec(1, choice(
      /[0-9][0-9_]*\.[0-9][0-9_]*/,
      /[0-9][0-9_]*[eE][+-]?[0-9]+/,
      /[0-9][0-9_]*\.[0-9][0-9_]*[eE][+-]?[0-9]+/,
    ))),

    hex_number: $ => /0[xX][0-9a-fA-F][0-9a-fA-F_]*/,
    binary_number: $ => /0[bB][01][01_]*/,
    string: $ => seq(
      '"',
      repeat(choice(
        $.string_interpolation,
        $.escape_sequence,
        $.string_content,
        '$',
      )),
      '"',
    ),

    string_content: $ => /[^"\\\n$]+/,

    escape_sequence: $ => token(prec(1, /\\[nrt0\\/"']/)),

    // --- Command expressions ---

    command_expression: $ => choice(
      seq('$(', optional($.command_content), ')'),
      seq('$>(', optional($.command_content), ')'),
      seq('$<(', optional($.command_content), ')'),
      seq('$!(', optional($.command_content), ')'),
      seq('$!>(', optional($.command_content), ')'),
      seq('$!<(', optional($.command_content), ')'),
    ),

    // --- Collections ---

    array_expression: $ => seq(
      '[',
      optional(commaSep1($._array_element)),
      optional(','),
      ']',
    ),

    _array_element: $ => choice(
      $.spread_expression,
      $._expression,
    ),

    binary_expression: $ => {
      const operators = [
        ['+', PREC.ADD],
        ['-', PREC.ADD],
        ['*', PREC.MULT],
        ['/', PREC.MULT],
        ['%', PREC.MULT],
        ['**', PREC.POWER],
        ['==', PREC.EQUALITY],
        ['!=', PREC.EQUALITY],
        ['<', PREC.COMPARISON],
        ['>', PREC.COMPARISON],
        ['<=', PREC.COMPARISON],
        ['>=', PREC.COMPARISON],
        ['&&', PREC.AND],
        ['||', PREC.OR],
        ['and', PREC.AND],
        ['or', PREC.OR],
        ['|', PREC.BITOR],
        ['^', PREC.BITXOR],
        ['&', PREC.BITAND],
        ['<<', PREC.SHIFT],
        ['>>', PREC.SHIFT],
        ['??', PREC.NULL_COALESCE],
        ['in', PREC.TYPE_TEST],
      ];

      return choice(
        ...operators.map(([op, prec_level]) =>
          prec.left(prec_level, seq(
            field('left', $._expression),
            field('operator', op),
            field('right', $._expression),
          ))
        ),
      );
    },

    unary_expression: $ => prec.right(PREC.UNARY, seq(
      field('operator', choice('!', '-', '~')),
      field('operand', $._expression),
    )),

    assignment_expression: $ => prec.right(PREC.ASSIGN, seq(
      field('left', $._expression),
      field('operator', choice('=', '+=', '-=', '*=', '/=', '%=', '??=', '&=', '|=', '^=', '<<=', '>>=')),
      field('right', $._expression),
    )),

    ternary_expression: $ => prec.right(PREC.TERNARY, seq(
      field('condition', $._expression),
      '?',
      field('consequence', $._expression),
      ':',
      field('alternative', $._expression),
    )),

    pipe_expression: $ => prec.left(PREC.PIPE, seq(
      field('left', $._expression),
      '|>',
      field('right', $._expression),
    )),

    call_expression: $ => prec.left(PREC.CALL, seq(
      field('function', $._expression),
      $.argument_list,
    )),

    argument_list: $ => seq(
      '(',
      optional(commaSep1($._argument)),
      optional(','),
      ')',
    ),

    _argument: $ => choice(
      $.spread_expression,
      $.named_argument,
      $._expression,
    ),

    member_expression: $ => prec.left(PREC.CALL, seq(
      field('object', $._expression),
      '.',
      field('property', $.identifier),
    )),

    index_expression: $ => prec.left(PREC.CALL, seq(
      field('object', $._expression),
      '[',
      field('index', $._expression),
      ']',
    )),

    // --- Lambda ---

    lambda_expression: $ => prec.right(PREC.ASSIGN, seq(
      optional('async'),
      choice(
        seq('fn', $.parameter_list),
        $.parameter_list,
      ),
      '=>',
      field('body', choice($.block, $._expression)),
    )),

    // --- Struct init ---

    await_expression: $ => prec.right(PREC.UNARY, seq(
      'await',
      $._expression,
    )),

    identifier: $ => /[a-zA-Z_][a-zA-Z0-9_]*/,
  },
});

/**
 * Creates a rule to match one or more occurrences of `rule` separated by commas.
 */
function commaSep1(rule) {
  return seq(rule, repeat(seq(',', rule)));
}
